// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dbRegister should put a single element for a Character file 1`] = `
Object {
  "AssetId": "CHARACTER#12345",
  "DataCategory": "Meta::Character",
  "Name": "Tess",
  "address": Object {
    "fileName": "test",
    "zone": "Library",
  },
  "images": Array [
    "IMAGE-123",
  ],
  "scopedId": "TESS",
  "zone": "Library",
}
`;

exports[`dbRegister should save meta for Asset type 1`] = `
Object {
  "AssetId": "ASSET#TEST",
  "DataCategory": "Meta::Asset",
  "address": Object {
    "fileName": "test",
    "zone": "Library",
  },
  "zone": "Library",
}
`;
